Bug 935417 - Better word wrapping in the css rule view. r=harth

--- a/browser/themes/windows/devtools/ruleview.css
+++ b/browser/themes/windows/devtools/ruleview.css
@@ -22,6 +22,7 @@
   padding: 1px 4px;
   margin-top: 4px;
   -moz-user-select: none;
+  word-wrap: break-word;
 }
 
 .ruleview-rule-source:hover {
@@ -115,6 +116,7 @@
 
 .ruleview-property {
   border-left: 2px solid transparent;
+  clear: right;
 }
 
 .ruleview-property  > * {
@@ -133,6 +135,10 @@
 .ruleview-namecontainer:hover > .ruleview-propertyname,
 .ruleview-propertycontainer:hover > .ruleview-propertyvalue {
   border-bottom-color: hsl(0,0%,50%);
+}
+
+.ruleview-selector {
+  word-wrap: break-word;
 }
 
 .ruleview-selector-separator, .ruleview-selector-unmatched {
